--- a/Day6/protfolio.html
+++ b/Day6/protfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Protfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./styling.css">
 
 </head>
@@ -17,7 +17,7 @@
             <ul>
                 <li> <a href="#"> Home </a></li>
                 <li> <a href="#"> About </a></li>
-                <li> <a href="#"> Protfolio </a></li>
+                <li> <a href="#"> Portfolio </a></li>
                 <li> <a href="#"> Service </a></li>
                 <li> <a href="#"> Contact </a></li>
             </ul>
